minikube/bconic-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service-deployment
  namespace: production
spec:
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      namespace: production
      labels:
        app: frontend-pod
    spec:
      containers:
        - name: frontend-pod
          image: jeralsandeeptha/bconic-frontend:10ceb1037f6c9add263a8119f945cddcd80e72f6
          ports:
            - containerPort: 80
