minikube/bconic-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: production
spec:
  selector:
    app: frontend-pod
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
